# Crawpapa-Fetch

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v4.0.md  RELEASE_NOTES_v5.0.md  RELEASE_NOTES_v5.1.md  RELEASE_NOTES_v5.2.md  RELEASE_NOTES_v5.3.md  RELEASE_NOTES_v5.4.md  RELEASE_NOTES_v5.5.md  RELEASE_NOTES_v5.6.md  SECURITY.md  THIRD_PARTY_NOTICES.md  install.bat  install.sh  install_portable.bat  main.py  pack.bat  pack.sh  proxy_pool.json  pyproject.toml  setup_mcp_clients.py  start.bat  start.sh  unified_crawler_server.py
agents/: crawler_crew.py  mcp_client.py
config/: mcp_config.json  settings.py
crawler_core/: __init__.py  access_diagnostics.py  async_http.py  cache.py  category_tree.py  challenge.py  config.py  cookies.py  dns_pin.py  domain_memory.py  events.py  frontier.py  job_normalization.py  parsing.py  scrapling_adapter.py  scrapling_spider_adapter.py  security.py  selector_inference.py  site_spec.py  target_memory.py  templates.py  visualization.py
docs/: INSTALL_UNIX.md  INTEGRATIONS.md  MAINTENANCE.md  PACKAGING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RELEASE_NOTES.md  ROADMAP.md  SETUP.md  TOOL_GUIDE.md  TUTORIAL.md  VISUALIZATION_HANDOFF.md  codex.config.example.toml  mcp.example.json
schemas/: baidu_hot.realtime.json  weibo_hot.realtime.json
tests/: test_cli.py  test_core_modules.py  test_mcp_client.py  test_security.py  test_setup_clients.py  test_unified_server.py  test_v4_features.py  test_v4_security.py
tools/: README.md
utils/: token_monitor.py
workspace/: README.md
(+11 files in other folders)
